aws/k8s/staging/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: moodle
  namespace: moodle-staging
spec:
  replicas: 0  # Mặc định tắt, CI/CD sẽ scale lên 1 khi deploy
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  selector:
    matchLabels:
      app: moodle
      env: staging
  template:
    metadata:
      labels:
        app: moodle
        env: staging
    spec:
      containers:
      - name: moodle
        image: ndcuongdevops/moodle-lms:latest
        ports:
        - containerPort: 80
        volumeMounts:
        - name: moodle-data-volume
          mountPath: /var/www/moodledata
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            memory: 384Mi
        readinessProbe:
          httpGet:
            path: /login/index.php
            port: 80
          initialDelaySeconds: 30
          periodSeconds: 10
        livenessProbe:
          httpGet:
            path: /login/index.php
            port: 80
          initialDelaySeconds: 60
          periodSeconds: 30
      volumes:
      - name: moodle-data-volume
        persistentVolumeClaim:
          claimName: moodle-efs-pvc
