aws/k8s/staging/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: moodle-service
  namespace: moodle-staging
spec:
  selector:
    app: moodle
    env: staging
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
